server/flaskr/codes/Output/op_01FB15ECS101_d015b870a0c94e098118a8ef671ff95d_0
/opt/Input/01FB15ECS101_d015b870a0c94e098118a8ef671ff95d.java:1: error: class, interface, or enum expected
public static void
              ^
1 error
